fix icon position on tablet

--- a/sass/blocks/benefit-row.scss
+++ b/sass/blocks/benefit-row.scss
@@ -29,6 +29,10 @@
     float: right;
   }
 
+  .benefit-row .benefit--icon-souvenirs {
+    float: right;
+  }
+
   // SECOND BENEFIT
   .benefit-row--invert .benefit {
     float: right;
