--- a/sass/blocks/benefit.scss
+++ b/sass/blocks/benefit.scss
@@ -123,7 +123,6 @@
     &-food {
       background-position: center 63px;
       background-size: 77px 68px;
-      float: right;
     }
 
     &:last-child {
